@@ -3,6 +3,8 @@
 	Ext.define('CMDBuild.controller.administration.accordion.Configuration', {
 		extend: 'CMDBuild.controller.common.abstract.Accordion',
 
+		requires: ['CMDBuild.core.constants.Proxy'],
+
 		/**
 		 * @cfg {CMDBuild.controller.common.MainViewport}
 		 */
@@ -20,6 +22,9 @@
 
 		/**
 		 * @param {Object} configurationObject
+		 * @param {CMDBuild.controller.common.MainViewport} configurationObject.parentDelegate
+		 *
+		 * @returns {Void}
 		 *
 		 * @override
 		 */
@@ -33,6 +38,8 @@
 
 		/**
 		 * @param {Number} nodeIdToSelect
+		 *
+		 * @returns {Void}
 		 *
 		 * @override
 		 */
